added load more topics button

--- a/index.html
+++ b/index.html
@@ -159,6 +159,8 @@
 			        </tr>
 			    </tbody>
 			</table>
+
+			<a href="#!" ng-click="loadMoreTopics()">{{ translation.load_more }}</a>
 		</center>
 
 
