--- a/index.html
+++ b/index.html
@@ -83,9 +83,11 @@
 			</div>
 		</center>
 
-		<!-- Communities Dropdown -->
+		<!-- Communities Dropdown and New topic button -->
 		<div style="left: 10%;position: relative;margin:5px">
 			<button data-component="dropdown" data-target="#communities-dropdown">Communities<span class="caret down"></span></button>
+
+			<button ng-click="openTopicComposer()" class="button primary">{{ translation.new_topic }}</button>
 		</div>
 		<div class="dropdown" id="communities-dropdown">
 			<center>
@@ -167,7 +169,6 @@
 
 
 		<!-- Topic content (messages..) -->
-		<!-- TODO: It must be a modal! -->
 		<center id="topicModal" class="topicmodal hide" ng-controller="topic" ng-init="topic={};tid='';posts=[];page=0;pages=0;">
 			<a class="closemodal" ng-click="closeModal()" href="#!">{{ translation.close }}</a>
 			<div class="width-80">
@@ -229,6 +230,50 @@
 		</center>
 
 
+		<!-- Topic composer -->
+		<center id="topicComposerModal" class="topicmodal hide" ng-controller="topic-composer" ng-init="title='';selectedCommunity=null;">
+			<a class="closemodal" ng-click="closeModal()" href="#!">{{ translation.close }}</a>
+			<div class="width-80">
+				<!-- Communities Dropdown -->
+				<div align="left" style="margin:5px">
+					<button data-component="dropdown" data-target="#composer-communities-dropdown">{{ selectedCommunity || translation.select_community }}<span class="caret down"></span></button>
+
+					<!-- Title -->
+					<input type="text" class="width-50" placeholder="{{ translation.title }}" ng-model="titleTxt"/>
+				</div>
+				<div class="dropdown" id="composer-communities-dropdown">
+					<center>
+						
+						<ul class="communities">
+							<li ng-click="setCommunity(c.slug)" style="float:none;" ng-repeat="c in communities"><a class="community" href="#!">{{ c.name }}</a></li>
+						</ul>
+
+						<a href="#!" data-action="dropdown-close">Close</a>
+					</center>
+				</div>
+
+				<!-- content composer -->
+				<div class="row centered">
+					<div class="col col-5" style="height:200px;">
+						<h4>{{ translation.reply }}</h4>
+						<textarea ng-model="contentTxt" style="height:200px;max-height:200px;"></textarea>
+
+						<br>
+						<button ng-click="sendTopic()" ng-disabled="!user.username" class="button primary">{{ translation.reply }}</button>
+					</div>
+
+					<div class="col col-5">
+						<h4>{{ translation.preview }}</h4>
+						<!-- preview (TODO) -->
+						<div style="max-height:200px;height:200px;overflow:auto;">
+						</div>
+					</div>
+				</div>
+
+			</div>
+		</center>
+
+
 
 	</div>
 
@@ -241,5 +286,6 @@
 	<script type="text/javascript" src="/js/logincontroller.js"></script>
 	<script type="text/javascript" src="/js/registercontroller.js"></script>
 	<script type="text/javascript" src="/js/topiccontroller.js"></script>
+	<script type="text/javascript" src="/js/topic-composercontroller.js"></script>
 
 </body>
