--- a/index.html
+++ b/index.html
@@ -163,8 +163,15 @@
 			            </td>
 			            <td class="width-20">{{ formatDate(t.last_update) }}</td>
 			            <!-- Actions column -->
-			            <td>
-			            	<a ng-if="user.isadmin || (user.id == t.uid) || isMod(user.id, t.community)" ng-click="deleteTopic(t.id)" href="#!"><i class="fa fa-trash" aria-hidden="true"></i></a>
+			            <td class="row">
+			            	<span class="col col-1" style="padding:10px">
+			            		{{ t.posts_number }}
+			            		<i class="fa fa-pencil" aria-hidden="true"></i>
+			            	</span>
+
+			            	<span class="col col-1" style="padding:10px">
+			            		<a ng-if="user.isadmin || (user.id == t.uid) || isMod(user.id, t.community)" ng-click="deleteTopic(t.id)" href="#!"><i class="fa fa-trash" aria-hidden="true"></i></a>
+			            	</span>
 			            </td>
 			        </tr>
 			    </tbody>
