fixed bug on creation_date

--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
 
 				<span ng-if="userprofile.isadmin" class="label primary outline"><a href="#">{{ translation.admin }}</a></span>
 
-				<p><b>{{ translation.registered }}</b>: {{ formatDateComplete(userprofile.creation_Date) }}</p>
+				<p><b>{{ translation.registered }}</b>: {{ formatDateComplete(userprofile.creation_date) }}</p>
 
 				<!-- action buttons -->
 				<div style="padding-bottom: 20px;">
@@ -441,7 +441,7 @@
 				
 				<h1>{{ userprofile.username }}</h1>
 
-				<p><b>{{ translation.registered }}</b>: {{ formatDateComplete(userprofile.creation_Date) }}</p>
+				<p><b>{{ translation.registered }}</b>: {{ formatDateComplete(userprofile.creation_date) }}</p>
 
 				<fieldset style="width:50%;">
 					<legend>{{ translation.user_data }}</legend>
