--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<nav id="navbar-main" class="row menu">
 				<ul class="col col-10" style="display: block;list-style-type: none;">
 					<li><a ng-click="getHomeTopics(0)" href="#!">{{ translation.home }}</a></li>
-					<li><a href="#!">{{ translation.recent }}</a></li>
+					<li><a ng-click="getRecentTopics(0)" href="#!">{{ translation.recent }}</a></li>
 				</ul>
 
 				<ul class="col col-2" style="display: block;list-style-type: none;">
