added Ajaxify to change url and title on topic and user profile visit

--- a/index.html
+++ b/index.html
@@ -517,6 +517,7 @@
 	</script>
 
 	<!-- Angular Controllers -->
+	<script type="text/javascript" src="/js/ajaxify.js"></script>
 	<script type="text/javascript" src="/js/appcontroller.js"></script>
 	<script type="text/javascript" src="/js/logincontroller.js"></script>
 	<script type="text/javascript" src="/js/registercontroller.js"></script>
