--- a/index.html
+++ b/index.html
@@ -605,6 +605,7 @@
 
 	<!-- Angular Controllers -->
 	<script type="text/javascript" src="/js/ajaxify.js"></script>
+	<script type="text/javascript" src="/js/embed-combo.js"></script>
 	<script type="text/javascript" src="/js/appcontroller.js"></script>
 	<script type="text/javascript" src="/js/logincontroller.js"></script>
 	<script type="text/javascript" src="/js/registercontroller.js"></script>
